# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  formatter.py  gendiff.py  loader.py
gendiff/engine/: comparer.py  loader.py  terminal.py
gendiff/formatter/: __init__.py  json.py  plain.py  stylish.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.json  file1.yml  file2.json  file2.yml  result.txt  result_json.txt  result_plain.txt  result_style.txt
